# RoarEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CONVENTIONS.md  README.md  conanfile.py  conanfile.txt  create_sln.bat  doxyfile  doxygen-config  format.ps1  imgui.ini
.github/workflows/: linux.yml  windows.yml
ECS/: Prefab.cpp  Prefab.hpp  ecs.cpp
ECS/Component/: Component.hpp
ECS/System/: ClientRendererSystem.hpp  InputControllerSystem.hpp  MissileSystem.hpp  RendererSystem.hpp
RoarScriptCore/: CMakeLists.txt  RoarSandbox.cs  RoarScriptCore.cs
client/: client.cpp  client.h
core/: Application.cpp  Application.h  CMakeLists.txt  Common.h  CoreTests.cpp  EditorLayer.cpp  EditorLayer.h  Layer.cpp  ProjectManager.cpp  ProjectManager.h  RTEngine.cpp  RoarConfig.h  RoarEngine.cpp  SceneLayer.cpp  SceneLayer.h  Scripting.cpp  Scripting.h  Window.cpp  Window.h  application.cpp  application.h  framework.h  shared.cpp  shared.h
doc/latex/: md__r_e_a_d_m_e.tex  refman.tex
ecs/: CMakeLists.txt  Component.h  ECS.h  RenderSystem.cpp  RenderSystem.h  ScriptSystem.cpp  ScriptSystem.h
editor/: CMakeLists.txt  Editor.cpp  main.cpp
mono/include/mono/jit/: jit.h  mono-private-unstable.h
mono/include/mono/metadata/: appdomain.h  assembly.h  attrdefs.h  blob.h  class.h  debug-helpers.h  debug-mono-symfile.h  exception.h  image.h  loader.h  metadata.h  mono-config.h  mono-debug.h  mono-gc.h  mono-private-unstable.h  object.h  opcodes.h  profiler-events.h  profiler.h  reflection.h  row-indexes.h  sgen-bridge.h  threads.h  tokentype.h  verify.h
mono/include/mono/utils/: mono-counters.h  mono-dl-fallback.h  mono-error.h  mono-forward.h  mono-jemalloc.h  mono-logger.h  mono-private-unstable.h  mono-publib.h
projects/VS2022/: r-type.sln
projects/VS2022/r-type_client/: r-type_client.vcxproj
projects/VS2022/r-type_core/: r-type_core.cpp  r-type_core.vcxproj  r-type_core.vcxproj.filters
projects/VS2022/r-type_ecs/: r-type_ecs.vcxproj  r-type_ecs.vcxproj.filters
projects/VS2022/r-type_server/: r-type_server.vcxproj  r-type_server.vcxproj.filters
renderer/: CMakeLists.txt  Renderer.h  VulkanUIOverlay.cpp  base.cpp  renderer.cpp  renderer.h
rtmodule/: CMakeLists.txt  rt.cs
samples/: CMakeLists.txt  main.cpp
samples/pong/Scenes/: Game.ro
server/: server.cpp  server.h
src/: CMakeLists.txt  Makefile  client.cpp  main.cpp
